--- a/package.json
+++ b/package.json
@@ -17,30 +17,31 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.6",
-    "@babel/node": "^7.6.1",
+    "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
-    "@babel/register": "^7.5.5",
-    "@wdio/appium-service": "^5.18.2",
-    "@wdio/cli": "^5.22.4",
-    "@wdio/cucumber-framework": "^5.20.0",
-    "@wdio/local-runner": "^5.22.4",
-    "@wdio/sauce-service": "^5.22.5",
-    "@wdio/spec-reporter": "^5.22.4",
-    "@wdio/sync": "^5.20.1",
-    "appium": "^1.17.0",
+    "@babel/register": "^7.9.0",
+    "@wdio/appium-service": "^6.1.0",
+    "@wdio/cli": "^6.1.7",
+    "@wdio/cucumber-framework": "^6.1.6",
+    "@wdio/local-runner": "^6.1.7",
+    "@wdio/sauce-service": "^6.1.0",
+    "@wdio/spec-reporter": "^6.1.5",
+    "@wdio/sync": "^6.1.7",
+    "appium": "^1.17.1",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
-    "cucumber": "^6.0.4",
+    "cucumber": "^6.0.5",
     "dotenv": "^8.2.0",
-    "fibers": "^4.0.3",
-    "fs-extra": "^8.1.0",
+    "fibers": "^5.0.0",
+    "fs-extra": "^9.0.0",
     "import-modules": "^2.0.0",
     "minimist": "^1.2.5",
     "multiple-cucumber-html-reporter": "^1.16.2",
-    "wdio-cucumberjs-json-reporter": "^1.3.0",
-    "wdio-json-reporter": "^1.4.0",
-    "webdriverio": "^5.22.4",
-    "zip-a-folder": "^0.0.9"
+    "wdio-cucumberjs-json-reporter": "^2.0.1",
+    "wdio-json-reporter": "^2.0.0",
+    "webdriverio": "^6.1.7",
+    "webpack": "^4.43.0",
+    "zip-a-folder": "^0.0.12"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -51,10 +52,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "gherkin-lint": "^3.4.2",
-    "husky": "^3.1.0",
-    "prettier": "^1.19.1"
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "gherkin-lint": "^4.0.1",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5"
   },
   "husky": {
     "hooks": {
